# fluxo-futuro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  log.txt  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: backend-ci.yml  frontend-ci.yml
docs/: classe.md
src/apps/accounts/: models.py  urls.py
src/apps/dashboard/: urls.py  views.py
src/apps/dashboard/templatetags/: menu_tags.py
src/apps/departments/: forms.py  models.py  signals.py  urls.py  views.py
src/apps/departments/migrations/: 0001_initial.py  0002_rename_ativo_department_is_active_and_more.py  0003_rename_member_department_members.py
src/apps/events/: forms.py  models.py  urls.py  views.py
src/apps/events/migrations/: 0001_initial.py
src/apps/finance/: forms.py  models.py  urls.py  views.py
src/apps/finance/migrations/: 0001_initial.py
src/apps/managements/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/meetings/: forms.py  models.py  urls.py  views.py
src/apps/meetings/migrations/: 0001_initial.py
src/apps/permissions/: urls.py  views.py
src/apps/users/: forms.py  urls.py  views.py
src/config/: form.py  settings.py  urls.py  utils.py  views.py
src/static/src/: main.js  main.scss
src/static/src/js/: material-dashboard.js
src/templates/: 403.html  base.html  dashboard.html  home.html
src/templates/components/: card_header.html
src/templates/includes/: footer.html  head.html  navbar.html  notifications.html  scripts.html  sidenav.html
src/templates/registration/: login.html
(+23 files in other folders)
